[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/scripts/music_controller.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://sprites/Fonts/GravityBold8.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="music_controller" type="Node"]
script = ExtResource( 1 )

[node name="music" type="AudioStreamPlayer" parent="."]
volume_db = 2.0

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0

[node name="splashTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Volume" type="CanvasLayer" parent="."]
layer = 13

[node name="Volume" type="Label" parent="Volume"]
visible = false
margin_top = 3.0
margin_right = 533.0
margin_bottom = 19.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 2 )
text = "Volume:"
align = 1
valign = 1

[node name="VTimer" type="Timer" parent="."]

[connection signal="finished" from="music" to="." method="_on_music_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="splashTimer" to="." method="_on_splashTimer_timeout"]
[connection signal="timeout" from="VTimer" to="." method="_on_VTimer_timeout"]
